WebUI: Update Downloads to fix bug introduced by JS lifecycle controls.

The patch that added JS lifecycle calls to MdDownloadsDOMHandler
broke search terms.

This patch fixes that bug and adds a test to catch regressions.

BUG=608317

Review-Url: https://codereview.chromium.org/1938983003
Cr-Commit-Position: refs/heads/master@{#391313}

Former-commit-id: cf1c3c70c29cd7b1745417fe915d2e213ab987f4